<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingVertical="30dp"
    android:paddingHorizontal="16dp">

    <EditText
        android:id="@+id/et_package_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/text_edit_size"
        android:hint="Enter package name"
        android:inputType="text" />

    <EditText
        android:id="@+id/et_notification_channel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/text_edit_size"
        android:hint="Enter notification channel as regex"
        android:inputType="text" />

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <AutoCompleteTextView
            android:id="@+id/actv_permission"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="@dimen/text_edit_size"
            android:hint="Select permissions"
            android:completionThreshold="1"
            android:text="android.permission."
            android:inputType="text" />

        <Button
            android:id="@+id/btn_done"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text_size_button"
            android:text="Done" />
    </LinearLayout>

    <Switch
        android:id="@+id/sw_enable"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Disable"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingVertical="10dp"
            android:paddingHorizontal="2dp"
            android:orientation="vertical">
            <Button
                android:id="@+id/btn_install_package"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/text_size_button"
                android:text="@string/grant_all_permissions" />

            <Button
                android:id="@+id/btn_permission"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/text_size_button"
                android:text="@string/revoke_permissions" />

            <Button
                android:id="@+id/btn_battery_optimization"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/text_size_button"
                android:text="@string/remove_battery_optimization_exemption" />

        </LinearLayout>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingVertical="10dp"
            android:paddingHorizontal="2dp"
            android:orientation="vertical">

            <Button
                android:id="@+id/btn_application_visibility"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/text_size_button"
                android:text="@string/hide_application" />

            <Button
                android:id="@+id/btn_notification_channel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/text_size_button"
                android:text="@string/disable_notification_channel" />

            <Button
                android:id="@+id/btn_notification_enable"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/text_size_button"
                android:text="@string/disable_notification_package" />

        </LinearLayout>

    </LinearLayout>
    <TextView
        android:id="@+id/tv_title_log"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Title"
        android:textSize="15sp"
        android:textStyle="bold"
        android:textColor="#000000" />

    <ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="5dp">

        <TextView
            android:id="@+id/tv_log"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="This is a log"
            android:textSize="@dimen/text_size_log"
            android:textColor="#000000" />
    </ScrollView>

</LinearLayout>